name:                forum
version:             0.1.0.0
synopsis:            Functional Relational Mapping library
-- description:
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
copyright:           (c) Julian K. Arni
category:            Database
build-type:          Simple
cabal-version:       >=1.10
data-files:          test/schema.sql

library
  exposed-modules:     Forum
                     , Forum.Internal
                     , Forum.Internal.Types
                     , Forum.Internal.Utils
                     , Forum.Internal.TH
                     , Forum.Internal.Decodable
                     , Forum.Internal.HasTable
                     , Forum.Internal.ToQuery
  default-extensions:  DeriveFunctor
                     , DeriveGeneric
                     , DataKinds
                     , KindSignatures
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , GADTs
                     , OverloadedStrings
                     , QuasiQuotes
                     , TemplateHaskell
  build-depends:       base >=4.8 && <4.9
                     , bytestring == 0.10.*
                     , template-haskell == 2.10.*
                     , hasql == 0.19.*
                     , data-default-class == 0.*
                     , time == 1.5.*
                     , text == 1.2.*
                     , bytestring-show == 0.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -ddump-splices
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ForumSpec
                     , Paths_forum
  default-extensions:  DeriveFunctor
                     , DeriveGeneric
                     , TypeOperators
                     , MultiParamTypeClasses
                     , DataKinds
                     , FunctionalDependencies
                     , PolyKinds
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
                     , TemplateHaskell
                     , OverloadedStrings
  build-depends:       base == 4.*
                     , forum
                     , hspec == 2.*
                     , text
                     , process
